# n64_gamecat

./: .gitignore  .gitmodules  LICENSE  README.md  platformio.ini
Ghidra/OoT/: build_instructions
data_plotter/: data.txt  data_2k.txt  main.py  main2.py
gamecat_fpga/: gamecat_fpga.xpr
n64_emu/n64_emu/: CMakeLists.txt  counter.pio  n64_emu.cpp
n64_gamecat/: CMakeLists.txt  Wire.cpp  Wire.h  blink.cpp  cartridge.pio  console.pio  control.pio  demo.pio  demo_read.pio  gpio_cfg.h  n64_gamecat.cpp  pico_sdk_import.cmake  state.h
n64_gamecat_rp2350b/: fp-info-cache  fp-lib-table  n64.kicad_sym  n64_gamecat_rp2350b-B_Cu.gbr  n64_gamecat_rp2350b-B_Mask.gbr  n64_gamecat_rp2350b-B_Paste.gbr  n64_gamecat_rp2350b-B_Silkscreen.gbr  n64_gamecat_rp2350b-Edge_Cuts.gbr  n64_gamecat_rp2350b-F_Cu.gbr  n64_gamecat_rp2350b-F_Mask.gbr  n64_gamecat_rp2350b-F_Paste.gbr  n64_gamecat_rp2350b-F_Silkscreen.gbr  n64_gamecat_rp2350b-NPTH.drl  n64_gamecat_rp2350b-PTH.drl  n64_gamecat_rp2350b-all-pos.csv  n64_gamecat_rp2350b-job.gbrjob  n64_gamecat_rp2350b.dsn  n64_gamecat_rp2350b.frb  n64_gamecat_rp2350b.kicad_pcb  n64_gamecat_rp2350b.kicad_prl  n64_gamecat_rp2350b.kicad_pro  n64_gamecat_rp2350b.kicad_sch  n64_gamecat_rp2350b.net  n64_gamecat_rp2350b.rules  n64_gamecat_rp2350b.ses  n64_gamecat_rp2350b_BOM.csv  n64_gamecat_rp2350b_bak.kicad_pcb  n64_gamecat_rp2350b_bak.kicad_pro  switched.dsn  switched.rules  switched.ses  sym-lib-table  ~n64_gamecat_rp2350b.kicad_pcb.lck
n64_gamecat_switched/: CMakeLists.txt  README.md  n64_capture.pio  n64_gamecat_switched.cpp  n64_respond_tokens.pio  rom-hacking-notes.md
pcb/: fp-info-cache  test_pcb-B_Cu.gbr  test_pcb-B_Mask.gbr  test_pcb-B_Paste.gbr  test_pcb-B_SilkS.gbr  test_pcb-Edge_Cuts.gbr  test_pcb-F_Cu.gbr  test_pcb-F_Mask.gbr  test_pcb-F_Paste.gbr  test_pcb-F_SilkS.gbr  test_pcb-NPTH.drl  test_pcb-PTH.drl  test_pcb-job.gbrjob  test_pcb.kicad_pcb  test_pcb.kicad_pcb-bak
src/: consts.h  main.cpp
(+310 files in other folders)
